@@ -1,28 +1,24 @@
 package ai.lzy.allocator.test;
 
-import ai.lzy.allocator.dao.OperationDao;
-import ai.lzy.allocator.dao.SessionDao;
-import ai.lzy.allocator.dao.VmDao;
-import ai.lzy.allocator.dao.impl.AllocatorDataSource;
+import ai.lzy.allocator.alloc.dao.SessionDao;
+import ai.lzy.allocator.alloc.dao.VmDao;
 import ai.lzy.allocator.disk.Disk;
 import ai.lzy.allocator.disk.DiskMeta;
 import ai.lzy.allocator.disk.DiskSpec;
-import ai.lzy.allocator.disk.DiskStorage;
 import ai.lzy.allocator.disk.DiskType;
-import ai.lzy.allocator.model.CachePolicy;
-import ai.lzy.allocator.model.Vm;
-import ai.lzy.allocator.model.Workload;
-import ai.lzy.allocator.volume.DiskVolumeDescription;
-import ai.lzy.allocator.volume.VolumeMount;
-import ai.lzy.allocator.volume.VolumeRequest;
+import ai.lzy.allocator.disk.dao.DiskDao;
+import ai.lzy.allocator.model.*;
+import ai.lzy.allocator.storage.AllocatorDataSource;
 import ai.lzy.longrunning.Operation;
+import ai.lzy.longrunning.dao.OperationDao;
 import ai.lzy.model.db.Storage;
 import ai.lzy.model.db.TransactionHandle;
 import ai.lzy.model.db.test.DatabaseTestUtils;
 import ai.lzy.v1.VmAllocatorApi;
 import com.google.protobuf.Any;
-import io.grpc.Status;
+import com.google.protobuf.Empty;
 import io.micronaut.context.ApplicationContext;
+import io.micronaut.inject.qualifiers.Qualifiers;
 import io.zonky.test.db.postgres.junit.EmbeddedPostgresRules;
 import io.zonky.test.db.postgres.junit.PreparedDbRule;
 import org.junit.After;
@@ -33,10 +29,11 @@ import org.junit.Test;
 
 import java.sql.SQLException;
 import java.time.Duration;
-import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
+
+import static java.time.Instant.now;
 
 public class DaoTest {
 
@@ -46,18 +43,19 @@ public class DaoTest {
     private OperationDao opDao;
     private SessionDao sessionDao;
     private VmDao vmDao;
-    private DiskStorage diskStorage;
+    private DiskDao diskDao;
     private Storage storage;
     private ApplicationContext context;
 
     @Before
     public void setUp() {
         context = ApplicationContext.run(DatabaseTestUtils.preparePostgresConfig("allocator", db.getConnectionInfo()));
-        opDao = context.getBean(OperationDao.class);
+        //context = ApplicationContext.run(DatabaseTestUtils.prepareLocalhostConfig("allocator"));
         storage = context.getBean(Storage.class);
+        opDao = context.getBean(OperationDao.class, Qualifiers.byName("AllocatorOperationDao"));
         sessionDao = context.getBean(SessionDao.class);
         vmDao = context.getBean(VmDao.class);
-        diskStorage = context.getBean(DiskStorage.class);
+        diskDao = context.getBean(DiskDao.class);
     }
 
     @After
@@ -71,20 +69,38 @@ public class DaoTest {
         final var meta = VmAllocatorApi.AllocateMetadata.newBuilder()
             .setVmId("id")
             .build();
-        final var op1 = opDao.create("Some op", "test", Any.pack(meta), null);
+
+        final var op1 = new Operation(
+            UUID.randomUUID().toString(),
+            "test",
+            now(),
+            "Some op",
+            null,
+            Any.pack(meta),
+            now(),
+            false,
+            null,
+            null);
+
+        opDao.create(op1, null);
 
         final var op2 = opDao.get(op1.id(), null);
         Assert.assertNotNull(op2);
         Assert.assertFalse(op2.done());
         Assert.assertEquals("Some op", op2.description());
 
-        op2.setError(Status.NOT_FOUND.withDescription("Error"));
-        opDao.update(op2, null);
+        var status = com.google.rpc.Status.newBuilder()
+            .setCode(io.grpc.Status.NOT_FOUND.getCode().value())
+            .setMessage("Error")
+            .build();
+
+        opDao.updateError(op2.id(), status.toByteArray(), null);
+
         final var op3 = opDao.get(op1.id(), null);
         Assert.assertNotNull(op3);
         Assert.assertTrue(op3.done());
         Assert.assertEquals("Error", op3.error().getDescription());
-        Assert.assertEquals(Status.NOT_FOUND.getCode(), op3.error().getCode());
+        Assert.assertEquals(io.grpc.Status.NOT_FOUND.getCode(), op3.error().getCode());
     }
 
     @Test
@@ -92,17 +108,30 @@ public class DaoTest {
         final var meta = VmAllocatorApi.AllocateMetadata.newBuilder()
             .setVmId("id")
             .build();
-        Operation op;
+
+        var op = new Operation(
+            UUID.randomUUID().toString(),
+            "test",
+            now(),
+            "Some op",
+            null,
+            Any.pack(meta),
+            now(),
+            false,
+            null,
+            null);
+
         try (final var tx = TransactionHandle.create(storage)) {
-            op = opDao.create("Some op", "test", Any.pack(meta), tx);
+            opDao.create(op, tx);
             // Do not commit
         }
 
         final var op1 = opDao.get(op.id(), null);
         Assert.assertNull(op1);
 
+        op = new Operation("test", "Some op", Any.pack(meta));
         try (final var tx = TransactionHandle.create(storage)) {
-            op = opDao.create("Some op", "test", Any.pack(meta), tx);
+            opDao.create(op, tx);
             tx.commit();
         }
 
@@ -112,52 +141,79 @@ public class DaoTest {
 
     @Test
     public void testSession() throws SQLException {
-        final var s = sessionDao.create("test", new CachePolicy(Duration.ofSeconds(10)), null);
+        Session s = createSession();
 
         final var s1 = sessionDao.get(s.sessionId(), null);
         Assert.assertNotNull(s1);
-        Assert.assertEquals("test", s1.owner());
+        Assert.assertEquals("owner", s1.owner());
         Assert.assertEquals(Duration.ofSeconds(10), s1.cachePolicy().minIdleTimeout());
 
         sessionDao.delete(s.sessionId(), null);
         Assert.assertNull(sessionDao.get(s.sessionId(), null));
     }
 
+    private Session createSession() throws SQLException {
+        var opId = UUID.randomUUID().toString();
+        var op = Operation.createCompleted(opId, "owner", "descr", null, null, Empty.getDefaultInstance());
+        var sid = UUID.randomUUID().toString();
+        var s = new Session(sid, "owner", "descr", new CachePolicy(Duration.ofSeconds(10)), opId);
+
+        try (var tx = TransactionHandle.create(storage)) {
+            opDao.create(op, tx);
+            sessionDao.create(s, tx);
+            tx.commit();
+        }
+        return s;
+    }
+
     @Test
     public void testVm() throws SQLException {
+        var session = createSession();
+        var allocOp = Operation.createCompleted("xxx", "owner", "descr", null, null,
+            VmAllocatorApi.AllocateResponse.getDefaultInstance());
+        opDao.create(allocOp, null);
+
         final VolumeMount volume = new VolumeMount(
             "volume", "/mnt/volume", false, VolumeMount.MountPropagation.BIDIRECTIONAL);
         final var wl1 = new Workload(
             "wl1", "im", Map.of("a", "b"), List.of("a1", "a2"), Map.of(1111, 2222),
             List.of(volume));
-        final var volumeRequest = new VolumeRequest(new DiskVolumeDescription("diskVolume", "diskId", 3));
-        final var vm = vmDao.create("session", "pool", "zone", Collections.emptyList(),
-            List.of(wl1), List.of(volumeRequest), "op1", Instant.now(), null, null
-        );
+        final var volumeRequest = new VolumeRequest(new DiskVolumeDescription("id-1", "diskVolume", "diskId", 3));
+
+        final var vmSpec = new Vm.Spec(
+            "placeholder",
+            session.sessionId(),
+            "pool",
+            "zone",
+            List.of(),
+            List.of(wl1),
+            List.of(volumeRequest),
+            null);
+        final var vm = vmDao.create(vmSpec, allocOp.id(), now(), now().plus(Duration.ofDays(1)), "ott", null);
 
         final var vm1 = vmDao.get(vm.vmId(), null);
         Assert.assertNotNull(vm1);
-        Assert.assertEquals("session", vm1.sessionId());
+        Assert.assertEquals(session.sessionId(), vm1.sessionId());
         Assert.assertEquals("pool", vm1.poolLabel());
         Assert.assertEquals("zone", vm1.zone());
         Assert.assertEquals(List.of(wl1), vm1.workloads());
-        Assert.assertEquals("op1", vm1.allocationOperationId());
-        Assert.assertEquals(Vm.VmStatus.CREATED, vm1.status());
+        Assert.assertEquals(allocOp.id(), vm1.allocOpId());
+        Assert.assertEquals(Vm.Status.ALLOCATING, vm1.status());
         Assert.assertEquals(List.of(volumeRequest), vm1.volumeRequests());
 
-        vmDao.updateStatus(vm1.vmId(), Vm.VmStatus.IDLE, null);
-        final var vm2 = vmDao.acquire("session", "pool", "zone", null);
+        vmDao.setVmRunning(vm1.vmId(), Map.of(), now().plus(Duration.ofDays(1)), null);
+        vmDao.setStatus(vm1.vmId(), Vm.Status.IDLE, null);
+
+        final var vm2 = vmDao.acquire(vmSpec, null);
         Assert.assertNotNull(vm2);
         Assert.assertEquals(vm1.vmId(), vm2.vmId());
-        Assert.assertEquals(Vm.VmStatus.RUNNING, vm2.status());
+        Assert.assertEquals(Vm.Status.RUNNING, vm2.status());
 
-        final var vms = vmDao.list("session");
+        final var vms = vmDao.list(session.sessionId());
         Assert.assertEquals(List.of(vm2), vms);
 
-        vmDao.update(vm2.vmId(), new Vm.VmStateBuilder(vm2.state())
-            .setStatus(Vm.VmStatus.IDLE)
-            .setDeadline(Instant.now().minus(Duration.ofSeconds(1)))
-            .build(), null);
+        vmDao.setStatus(vm2.vmId(), Vm.Status.IDLE, null);
+        vmDao.setDeadline(vm2.vmId(), now().minus(Duration.ofSeconds(1)));
 
         final var vms2 = vmDao.listExpired(100);
         Assert.assertEquals(vm.vmId(), vms2.get(0).vmId());
@@ -166,7 +222,7 @@ public class DaoTest {
 
         Assert.assertNull(vmDao.getAllocatorMeta(vm.vmId(), null));
 
-        vmDao.saveAllocatorMeta(vm.vmId(), meta, null);
+        vmDao.setAllocatorMeta(vm.vmId(), meta, null);
         Assert.assertEquals(meta, vmDao.getAllocatorMeta(vm.vmId(), null));
     }
 
@@ -177,13 +233,13 @@ public class DaoTest {
             new DiskSpec("disk-name", DiskType.HDD, 35, "ru-central1-a"),
             new DiskMeta("user-id")
         );
-        diskStorage.insert(disk, null);
+        diskDao.insert(disk, null);
 
-        final Disk getDisk = diskStorage.get(disk.id(), null);
+        final Disk getDisk = diskDao.get(disk.id(), null);
         Assert.assertEquals(disk, getDisk);
 
-        diskStorage.remove(disk.id(), null);
+        diskDao.remove(disk.id(), null);
 
-        Assert.assertNull(diskStorage.get(disk.id(), null));
+        Assert.assertNull(diskDao.get(disk.id(), null));
     }
 }
